add swipe to login

--- a/www/templates/LoginTemplate.html
+++ b/www/templates/LoginTemplate.html
@@ -11,7 +11,12 @@
 				<label for="email">Email address</label>
 				<input id="email" placeholder="email" value="" type="email" pattern="[^ @]*@[^ @]*" class="marginBottom" />
 				<label for="password">Password</label>
-				<input id="password" placeholder="password" value="" type="password" />	
+				<input id="password" placeholder="password" value="" type="password" />
+				<ons-gesture-detector>
+				  <div id="detect-area" style="width: 100px; height: 100px;">
+				    Swipe Here
+				  </div>
+				</ons-gesture-detector>
 			</fieldset>
 
 			<br />
