testing swipe functions2

--- a/www/templates/LoginTemplate.html
+++ b/www/templates/LoginTemplate.html
@@ -13,18 +13,110 @@
 				<label for="password">Password</label>
 				<input id="password" placeholder="password" value="" type="password" />	
 			</fieldset>
+
 			<br />
 			<button id="login-button" data-theme="e" data-icon="arrow-r" data-shadow="false">Sign In</button>
 		</div>
 		<br />
+
+<!-- test swipe here -->
+
+		
+
+
+    <ons-toolbar>
+      <div class="left">
+        <ons-back-button>Home</ons-back-button>
+      </div>
+      <div class="center"></div>
+    </ons-toolbar>
+		<ons-carousel id="carousel" fullscreen swipeable auto-scroll overscrollable initial-index="0">
+		      <ons-carousel-item class="carousel-item" style="background-color: gray">
+		        <div class="color-tag">Gray</div>
+		      </ons-carousel-item>
+		      <ons-carousel-item class="carousel-item" style="background-color: #085078">
+		        <div class="color-tag">Blue</div>
+		      </ons-carousel-item>
+		      <ons-carousel-item class="carousel-item" style="background-color: #373B44">
+		        <div class="color-tag">Dark</div>
+		      </ons-carousel-item>
+		      <ons-carousel-item class="carousel-item" style="background-color: #D38312">
+		        <div class="color-tag">Orange</div>
+		      </ons-carousel-item>
+		    </ons-carousel>
+
+		    <div class="dots">
+		      <span id="dot0" class="dot" onclick="fn.swipe(this)">
+		        &#9679;
+		      </span>
+		      <span id="dot1" class="dot" onclick="fn.swipe(this)">
+		        &#9675;
+		      </span>
+		      <span id="dot2" class="dot" onclick="fn.swipe(this)">
+		        &#9675;
+		      </span>
+		      <span id="dot3" class="dot" onclick="fn.swipe(this)">
+		        &#9675;
+		      </span>
+		    </div>
+
+		    <script>
+		      ons.getScriptPage().onInit = function () {
+		        this.querySelector('ons-toolbar div.center').textContent = this.data.title;
+		        const carousel = document.getElementById('carousel');
+		        carousel.addEventListener('postchange', function () {
+		          var index = carousel.getActiveIndex();
+		          const dots = document.querySelectorAll('.dot');
+		          for (dot of dots) {
+		            dot.innerHTML = dot.id === 'dot' + index ? '&#9679;' : '&#9675;';
+		          }
+		        });
+		        window.fn.swipe = function (target) {
+		          carousel.setActiveIndex(Number(target.id.slice(-1)));
+		        }
+		      }
+		    </script>
+
+		    <style>
+		      .carousel-item {
+		        display: flex;
+		        justify-content: space-around;
+		        align-items: center;
+		      }
+
+		      .color-tag {
+		        color: #fff;
+		        font-size: 48px;
+		        font-weight: bold;
+		        text-transform: uppercase;
+		      }
+
+		      .dots {
+		        text-align: center;
+		        font-size: 30px;
+		        color: #fff;
+		        position: absolute;
+		        bottom: 40px;
+		        left: 0;
+		        right: 0;
+		      }
+
+		      .dots > span {
+		        cursor: pointer;
+		      }
+		    </style>
+
+
+
+
+
+<!-- end of test swipe -->
+
+
+
+
 			
 		<div class="hr"><hr /></div>
-
-		<ons-gesture-detector>
-			  <div id="detect-area" style="width: 200px; height: 300px; background-color: red;">
-			    Swipe Here
-			  </div>
-			</ons-gesture-detector>
 
 		
 		<div style="<%= demoModeStyle %>">
@@ -42,11 +134,3 @@
 		</div>
 	</div>
 </ons-page>
-<script>
-  document.addEventListener('swipeleft', function(event) {
-    if (event.target.matches('#detect-area')) {
-    	pushPage('homeTemplate.html', {data: {title: 'Page 2'}});
-      console.log('Swipe left is detected.');
-    }
-  });
-</script>
