Test of hydration in PhoneGapBuild

--- a/www/templates/LoginTemplate.html
+++ b/www/templates/LoginTemplate.html
@@ -32,10 +32,10 @@
     </ons-toolbar>
 		<ons-carousel id="carousel" fullscreen swipeable auto-scroll overscrollable initial-index="0">
 		      <ons-carousel-item class="carousel-item" style="background-color: gray">
-		        <div class="color-tag">Gray</div>
+		        <div class="color-tag">Grey</div>
 		      </ons-carousel-item>
 		      <ons-carousel-item class="carousel-item" style="background-color: #085078">
-		        <div class="color-tag">Blue</div>
+		        <div class="color-tag">Blueeeeee</div>
 		      </ons-carousel-item>
 		      <ons-carousel-item class="carousel-item" style="background-color: #373B44">
 		        <div class="color-tag">Dark</div>
